<?xml version="1.0"?>
<package format="2">
  <name>ouster_os1_64</name>
  <version>2.0.2</version>
  <description>
    Package for the simulation of the Lidar Ouster OS1-64.
  </description>

  <license>BSD</license>
  <author email="tlasguigne@laas.fr">Thibaud Lasguignes</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>


  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>  
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
